@@ -2,6 +2,11 @@ Revelation changelog
 
 ---------------[ xxxx-xx-xx : 0.4.0 ]---------------
 
+2004-09-16  Erik Grinaker <erikg@codepoet.no>
+
+	* copy password or other secret to clipboard when launching
+	an account
+
 2004-09-15  Erik Grinaker <erikg@codepoet.no>
 
 	* use 18x18 pixel icons in the treeview
